--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3",
+    "typescript": "4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.11"
   },
